# allelix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  slow.yml
allelix/: __init__.py  compare.py  config.py  models.py
allelix/annotators/: __init__.py  alphamissense.py  base.py  cadd.py  clinvar.py  gnomad.py  gwas.py  pharmgkb.py  snpedia.py
allelix/cli/: __init__.py  _helpers.py  _options.py  analyze.py  config.py  db.py  focused.py  utility.py
allelix/data/: __init__.py  clinvar_clnsig_snapshot.yaml  high_value_snps.yaml
allelix/databases/: __init__.py  _versions.py  alphamissense_loader.py  cadd_loader.py  cpic_loader.py  gnomad_loader.py  gwas_loader.py  loader_utils.py  manager.py  pharmgkb_loader.py  schema.py  snpedia_loader.py  snpedia_parser.py
allelix/exporters/: __init__.py  plink.py
allelix/parsers/: __init__.py  _helpers.py  ancestrydna.py  base.py  ftdna.py  ftdna_famfinder.py  ftdna_illumina.py  livingdna.py  myhappygenes.py  myheritage.py  twentythreeandme.py  vcf.py
allelix/reports/: __init__.py  _pipeline.py  diff.py  high_value.py  html.py  json_report.py  methylation.py  terminal.py
allelix/utils/: __init__.py  allele.py  build_detect.py
docs/: grch36-liftover.md
docs/adr/: 0035-variant-ref-and-coordinated-annotation-model.md  README.md
scripts/: build_alphamissense_cache.py  build_cadd_cache.py  build_gnomad_cache.py  extract_array_manifest.py  fetch_testdata.sh  parse_snpedia.py  scrape_snpedia.py  subset_for_demo.py
test_data/: FULL_TEST_PROTOCOL.md  HG002_GROUND_TRUTH.yaml  check_ground_truth.py
tests/: conftest.py  generate_clinvar_fixture.py  generate_mock_data.py  generate_pharmgkb_fixture.py  test_changelog_sanitize.py  test_cli.py  test_cli_helpers.py  test_compare.py  test_config.py  test_end_to_end.py  test_extract_rsidless_gh128.py  test_mock_data_invariants.py  test_models.py  test_original_rsid_never_serializes.py  test_registry.py  test_version.py
tests/annotators/: test_alphamissense.py  test_base.py  test_cadd.py  test_clinvar.py  test_gnomad.py  test_gwas.py  test_pharmgkb.py  test_snpedia.py
tests/databases/: test_build_alphamissense_cache.py  test_build_cadd_cache.py  test_build_gnomad_cache.py  test_cadd_loader.py  test_clinvar_clnsig_drift.py  test_clinvar_tsv_loader.py  test_cpic_loader.py  test_download.py  test_gwas_loader.py  test_manager.py  test_pharmgkb_loader.py  test_pharmgkb_schema_pinning.py  test_remote_signal.py  test_resolve.py  test_snpedia_parser.py
tests/exporters/: test_plink_export.py
tests/fixtures/: mock_23andme_v5_is_generated.txt  mock_ftdna_famfinder.txt  mock_ftdna_illumina.txt  mock_gvcf.g.vcf  mock_multisample.vcf  mock_vcf.vcf  mock_vcf_bom.vcf  mock_vcf_bom_preamble.vcf  mock_vcf_chr_prefix_grch38.vcf  mock_vcf_no_signal.vcf  mock_vcf_non_utf8_header.vcf  mock_vcf_preamble.vcf  mock_vcf_rsidless.vcf
tests/parsers/: test_ancestrydna.py  test_ftdna.py  test_ftdna_famfinder.py  test_ftdna_illumina.py  test_helpers.py  test_livingdna.py  test_myhappygenes.py  test_myheritage.py  test_twentythreeandme.py  test_vcf.py
tests/reports/: test_diff.py  test_high_value.py  test_html.py  test_init.py  test_json_report.py  test_pipeline.py  test_rollup.py  test_rsidless_resolution_gh128.py  test_terminal.py
tests/utils/: test_allele.py  test_build_detect.py
