[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allelix"
version = "2.2.1"
description = "Open-source genotype analysis toolkit. Format-agnostic ingestion, database-agnostic annotation, offline-first."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "Allelix" }]
maintainers = [{ name = "dial481", email = "dial481@users.noreply.github.com" }]
keywords = ["genomics", "genotype", "snp", "bioinformatics", "dna"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.2",
    "mwparserfromhell>=0.6",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
cadd = [
    "pysam>=0.22",
]
vcf-index = [
    "pysam>=0.22",
]
dev = [
    "mypy>=1.11",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=7,<8",
    "ruff>=0.6",
    "types-PyYAML>=6.0",
]

[project.scripts]
allelix = "allelix.cli:main"

[project.urls]
Homepage = "https://allelix.io"
Source = "https://github.com/allelix/allelix"
Issues = "https://github.com/allelix/allelix/issues"
Changelog = "https://github.com/allelix/allelix/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["allelix*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
allelix = ["py.typed", "data/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 99
extend-exclude = ["test_data"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
    "D",
    "ANN",
]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN"]
"tests/generate_mock_data.py" = ["D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short --cov=allelix --cov-branch --cov-report=term-missing --cov-fail-under=92.5"
markers = [
    "slow: marks tests that download databases or process large files",
    "integration: marks end-to-end pipeline tests",
]
filterwarnings = [
    "error::ResourceWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
]

# GH allelix-dev #31: coverage gate now measures BOTH line and branch
# coverage. Pre-#31 the gate was line-only — a line counted as covered
# the moment any input crossed it, which is how the v2.0.x carrier-match
# case/strand and download-truncation correctness bugs shipped green.
#
# Floor history (CI numbers, NOT local):
#   - #31 (v2.1.2):  92.0   line-only → 92.44 with branch enabled
#   - #79 (v2.2):    92.4   after the missing-branch test batches landed
#     (carrier-match case norm + download truncation + clinvar stamp
#     migration + cadd_loader facade). CI on 3.11 / 3.12 reports 92.47;
#     local on 3.14 reports 92.62. The 0.15pp delta is Python-version-
#     dependent (~8 lines that run on 3.14 don't run on 3.11/3.12).
#   - #52 (v2.2):    92.5   after _check_gnomad_version warning-path
#     tests landed in PR 7. CI now clears the 92.5 bar honestly instead
#     of relying on the 0.07pp margin under it.
#
# *** CI is the floor's source of truth, NOT local. ***
# Local readings overstate coverage on this codebase because the CI
# matrix (3.11 + 3.12) misses a few lines that newer Python versions
# happen to execute. Calibrate the next ratchet from the CI matrix
# output (gh run view <run_id> --log-failed | grep TOTAL), never from
# a local pytest run.
#
# Primary annotators sit at 95%+. Raise the floor when new tests close
# documented missing branches; do NOT lower it.
[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
fail_under = 92.50

# GH allelix-dev #33: backs the py.typed promise with a real type checker.
# The starting baseline is intentionally permissive (no strict mode, no
# disallow_untyped_defs) so we get the gate in CI immediately instead of
# negotiating dozens of remediation PRs. Ratchet later by tightening the
# global flags one at a time and chasing the new errors.
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
# Don't enforce on tests — ruff's per-file-ignores already exempt tests
# from ANN, and unit-test fixtures use a lot of pytest magic that mypy
# would flag without strict-mode benefit.
exclude = ["tests/", "scripts/"]

# Third-party libraries without published type stubs.
[[tool.mypy.overrides]]
module = ["pysam", "mwparserfromhell.*"]
ignore_missing_imports = true
